--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,72 +1,73 @@
-/* General styles */
+/* Header.css */
+
 header {
-    background-color: #2c3e50;
-    color: #ecf0f1;
-    padding: 15px 20px;
+  background-color: #333;
+  padding: 10px;
+  color: white;
+  text-align: center;
+  width: 100%;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+h1 {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 5px;
+  padding: 0;
+  display: flex;
+}
+
+li {
+  margin-top: 5px;
+  margin-right: 15px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+button {
+  background-color: #d9534f;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: -5px;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #3498db;
+}
+
+@media screen and (max-width: 768px) {
+  body, html {
+    overflow-x: hidden;
   }
-  
-  nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+  /* header {
+    padding: 10px 0; 
+  } */
+  li {
+    margin-right: 10px;
+    font-size: 14px;
   }
-  
-  nav h1 {
-    margin: 0;
-    font-size: 24px;
+
+  button {
+    font-size: 14px;
+    padding: 6px 10px;
   }
-  
-  ul {
-    list-style: none;
-    display: flex;
-    gap: 20px;
-    margin: 0;
-    padding: 0;
-  }
-  
-  ul li {
-    font-size: 18px;
-  }
-  
-  ul li a {
-    text-decoration: none;
-    color: #ecf0f1;
-    transition: color 0.3s ease;
-  }
-  
-  ul li a:hover {
-    color: #e74c3c;
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  
-  /* Mobile responsiveness */
-  @media screen and (max-width: 768px) {
-    header {
-      padding: 10px 15px;
-    }
-  
-    nav h1 {
-      font-size: 20px; /* Decrease font size for smaller screens */
-    }
-  
-    ul li {
-      font-size: 14px; /* Decrease font size for smaller screens */
-    }
-    
-  }
-  
-  @media screen and (max-width: 425px) {
-    header {
-      padding: 5px 5px;
-    }
-  
-    nav h1 {
-      font-size: 16px; /* Further decrease font size for smaller screens */
-    }
-  
-    ul li {
-      font-size: 12px; /* Further decrease font size for smaller screens */
-    }
-  }
-  
+}
