--- a/src/components/Dashboard/Favorites.css
+++ b/src/components/Dashboard/Favorites.css
@@ -1,3 +1,4 @@
+
 .stock-card {
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -6,13 +7,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
+    background-color: var(--background-color);
+    color: var(--text-color);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
   
   .stock-link {
     text-decoration: none;
-    color: #333;
+    /* color: #333; */
+    color: var(--text-color);
     font-weight: bold;
   }
   
