--- a/src/components/Dashboard/FavoritesList.css
+++ b/src/components/Dashboard/FavoritesList.css
@@ -1,30 +1,35 @@
+.fav-entire {
+  width: 100%;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  padding-top: 5px;
+  height: calc(100vh - 70px);
+}
+
 .favorites-list-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f8f9fa;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .favorites-list {
-    display: flex;
-  flex-direction: column; 
+  max-width: 800px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.favorites-list {
+  display: flex;
+  flex-direction: column;
   gap: 5px;
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .stock-list-container {
+    padding: 5px;
   }
-  
-  .favorites-list h2 {
-    margin-bottom: 10px;
-    color: #333;
+
+  .stock-list-link {
+    font-size: 16px;
   }
-  
- 
-  @media screen and (max-width: 768px) {
-    .stock-list-container {
-      padding: 5px;
-    }
-  
-    .stock-list-link {
-      font-size: 16px;
-    }
-  }
+}
