--- a/src/components/Dashboard/StockChart.css
+++ b/src/components/Dashboard/StockChart.css
@@ -1,10 +1,15 @@
 /* src/components/StockChart.css */
-
+.chart-entire{
+  background-color: var(--background-color);
+  color: var(--text-color);
+  height: 120vh;
+}
 .stock-chart-container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add shadow */
+    height: 100vh;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
   }
   
   .stock-info {
@@ -32,11 +37,8 @@
     max-width: 200px;
   }
   
-  /*  */
-  
-  /* Highlighted style for selected parameter */
   .param-selector option:checked {
-    background-color: #4caf50; /* Green */
+    background-color: #4caf50; 
     color: white;
   }
   
