--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,11 +1,13 @@
-/* Header.css */
-
 header {
   background-color: #333;
   padding: 10px;
   color: white;
   text-align: center;
   width: 100%;
+  height: 70px;
+  /* position: fixed;
+  top: 0;
+  z-index: 1000;  */
 }
 
 nav {
@@ -16,7 +18,7 @@ nav {
   margin: 0 auto;
 }
 
-h1 {
+h3 {
   margin: 0;
 }
 
@@ -58,9 +60,7 @@ button:hover {
     overflow-x: hidden;
   }
 
-  /* header {
-    padding: 10px 0; 
-  } */
+
   li {
     margin-right: 10px;
     font-size: 14px;
@@ -69,5 +69,13 @@ button:hover {
   button {
     font-size: 14px;
     padding: 6px 10px;
+  }
+}
+@media screen and (max-width: 374px) {
+  header {
+    padding: 0px; 
+  }
+  h3 {
+    padding: 2px;
   }
 }
