--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -1,11 +1,17 @@
 /* Register.css */
-
+.regsiter-entire{
+  background-color: var(--background-color);
+  color: var(--text-color);
+  padding: 50px;
+  height: calc(100vh - 70px);
+}
 .register-container {
   text-align: center;
   max-width: 400px;
-  margin: 50px auto;
+  margin: 0 auto;
   padding: 20px;
-  background-color: #ffffff;
+  color: var(--text-color);
+  background-color: var(--background-color);
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
